started working on the portfolio project

--- a/scss/abstract/_variable.scss
+++ b/scss/abstract/_variable.scss
@@ -1,1 +1,12 @@
 $logo-font: "Monoton", cursive;
+$body-font: "Poppins", sans-serif;
+
+// font colors
+
+$color-primary: #00b0ff;
+
+$color-black-1: #131313;
+
+$color-white-1: #fff;
+
+// background colors
