completed the logo and navbar

--- a/scss/abstract/_variable.scss
+++ b/scss/abstract/_variable.scss
@@ -1,9 +1,11 @@
-$logo-font: "Monoton", cursive;
+$logo-font: "Fredericka the Great", cursive;
 $body-font: "Poppins", sans-serif;
+$nav-font: "Cairo", sans-serif;
 
 // font colors
 
 $color-primary: #00b0ff;
+$color-secondary: #f50057;
 
 $color-black-1: #131313;
 
