--- a/scss/abstract/_variable.scss
+++ b/scss/abstract/_variable.scss
@@ -5,10 +5,12 @@ $nav-font: "Cairo", sans-serif;
 // font colors
 
 $color-primary: #00b0ff;
-$color-secondary: #f50057;
+$color-secondary: #fa4d6a;
 
 $color-black-1: #131313;
 
 $color-white-1: #fff;
+
+$color-grey-1: #a09b9b;
 
 // background colors
