--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html {
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
@@ -23,22 +24,37 @@ body {
 }
 
 .heading-primary {
-  font-size: 7rem;
+  font-size: 8rem;
   font-family: "Cairo";
 }
 
+.heading-primary-inner-mod {
+  color: #f50057;
+}
+
 .heading-primary-mod {
-  color: #fa4d6a;
+  margin-left: -0.5rem;
 }
 
 .btn {
   font-size: 1.6rem;
   padding: 1rem 1.5rem;
+  background-color: #f50057;
+  border-radius: 4rem;
+  border: 0.1rem solid transparent;
+  color: #fff !important;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
 }
 
 .btn-link, .btn-link:link, .btn-link:visited {
   text-decoration: none;
   color: #131313;
+}
+
+.btn-resume {
+  padding: 0rem 2rem;
+  font-size: 1.5rem;
   display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
@@ -46,21 +62,21 @@ body {
           align-items: center;
 }
 
-.btn-resume {
-  background-color: #fa4d6a;
-  padding: 0rem 2rem;
-  font-size: 1.5rem;
-  color: #fff !important;
-  border-radius: 4rem;
-  border: 0.1rem solid transparent;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
 .btn-resume:hover {
   background-color: #fff;
   color: #131313 !important;
-  border: 0.1rem solid #fa4d6a;
+  border: 0.1rem solid #f50057;
+}
+
+.btn-viewWorks {
+  display: inline-block;
+  margin-top: 2rem;
+}
+
+.btn-viewWorks:hover {
+  background-color: #fff;
+  color: #131313 !important;
+  border: 0.1rem solid #f50057;
 }
 
 .header-area .nav-area {
@@ -79,7 +95,7 @@ body {
 }
 
 .header-area .nav-area .logo-text-mod {
-  color: #fa4d6a !important;
+  color: #f50057 !important;
 }
 
 .header-area .nav-area .nav {
@@ -123,7 +139,7 @@ body {
   position: absolute;
   left: 0;
   width: 0%;
-  background: #fa4d6a;
+  background: #f50057;
   height: 3.3rem;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
@@ -145,30 +161,48 @@ body {
       grid-template-columns: 1fr 1fr;
 }
 
-.header-area .hero-section .intro {
-  display: -ms-grid;
-  display: grid;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .header-area .hero-section .intro__greet {
   font-size: 2rem;
-  font-family: "Cairo";
+  font-family: "Cairo", sans-serif;
   color: #a09b9b;
-  margin-bottom: -18rem;
+  margin-bottom: -4rem;
 }
 
 .header-area .hero-section .intro__list {
   list-style: none;
   font-size: 2.2rem;
-  font-family: "Cairo";
-  margin-top: -13rem;
+  font-family: "Cairo", sans-serif;
+  margin-top: -2rem;
   font-weight: 600;
 }
 
 .header-area .hero-section .hero-img .img-hero {
   width: 100%;
+}
+
+.header-area .arrow {
+  text-align: center;
+}
+
+.header-area .arrow-down {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  margin: auto;
+  border: 1px solid #f50057;
+  text-align: center;
+  line-height: 40px;
+  font-size: 1.4rem;
+  margin-top: -4rem;
+  border-radius: 50%;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.header-area .arrow-down:hover {
+  background-color: #f50057;
+  color: #fff;
+  border: 1px solid transparent;
 }
 /*# sourceMappingURL=main.css.map */
