--- a/scss/abstract/_variable.scss
+++ b/scss/abstract/_variable.scss
@@ -5,7 +5,7 @@ $nav-font: "Cairo", sans-serif;
 // font colors
 
 $color-primary: #00b0ff;
-$color-secondary: #fa4d6a;
+$color-secondary: #f50057;
 
 $color-black-1: #131313;
 
