--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,23 +1,34 @@
 .btn {
   font-size: 1.6rem;
   padding: 1rem 1.5rem;
+  background-color: $color-secondary;
+  border-radius: 4rem;
+  border: 0.1rem solid transparent;
+  color: $color-white-1 !important;
+  transition: all 0.4s;
   &-link,
   &-link:link,
   &-link:visited {
     text-decoration: none;
     color: $color-black-1;
-    display: grid;
-    align-items: center;
   }
 
   &-resume {
-    background-color: $color-secondary;
     padding: 0rem 2rem;
     font-size: 1.5rem;
-    color: $color-white-1 !important;
-    border-radius: 4rem;
-    border: 0.1rem solid transparent;
-    transition: all 0.4s;
+    display: grid;
+    align-items: center;
+
+    &:hover {
+      background-color: $color-white-1;
+      color: $color-black-1 !important;
+      border: 0.1rem solid $color-secondary;
+    }
+  }
+  &-viewWorks {
+    display: inline-block;
+    margin-top: 2rem;
+
     &:hover {
       background-color: $color-white-1;
       color: $color-black-1 !important;
