--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,6 +3,8 @@
 // =====================================================
 
 .header-area {
+  padding-bottom: 10rem;
+  border-bottom: 0.1rem solid $color-grey-2;
   .nav-area {
     padding: 1.5rem 0;
     display: grid;
