--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,42 @@ body {
   margin-left: -0.5rem;
 }
 
+.heading__aboutme {
+  font-size: 4rem;
+  position: relative;
+}
+
+.heading__aboutme::after {
+  content: "";
+  position: absolute;
+  width: 4rem;
+  height: 0.5rem;
+  background-color: #f50057;
+  top: 7rem;
+  left: 0rem;
+}
+
+.heading__service-small {
+  font-size: 1.5rem;
+  color: #f50057;
+  margin-bottom: 1rem;
+}
+
+.heading__services {
+  font-size: 4rem;
+  padding: 0 22rem;
+}
+
+.heading-service-1 {
+  font-size: 2.6rem;
+  margin: 1rem 0;
+  color: #f50057;
+}
+
+.marginTop4 {
+  margin-top: 4rem;
+}
+
 .btn {
   font-size: 1.6rem;
   padding: 1rem 1.5rem;
@@ -130,6 +166,23 @@ body {
   border: 0.1rem solid #f50057;
 }
 
+.btn-group .btn-about {
+  padding: 0.8rem 1.5rem;
+  font-size: 1.6rem;
+  border: 0.1rem solid transparent;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+
+.btn-group .btn-about:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.btn-group .btn-active-about {
+  background-color: #f50057;
+  color: #fff;
+}
+
 .burger-menu {
   margin-top: 1.5rem;
   margin-left: 2rem;
@@ -169,6 +222,7 @@ body {
   right: -32rem;
   color: white;
   height: 100vh;
+  font-family: "Cairo", sans-serif;
   z-index: 1;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
@@ -245,6 +299,11 @@ body {
   color: #fff;
   text-decoration: none;
   margin-left: 1rem;
+}
+
+.header-area {
+  padding-bottom: 10rem;
+  border-bottom: 0.1rem solid #252323;
 }
 
 .header-area .nav-area {
@@ -423,28 +482,139 @@ body {
   padding: 10rem 0;
 }
 
+.section-about .tab-content {
+  opacity: 0;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.section-about .animate-tab {
+  opacity: 1;
+}
+
 .section-about .about {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
   grid-column-gap: 1rem;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
 }
 
-.section-about .about__info .btn-group .btn-about {
-  padding: 0.8rem 1.5rem;
-  font-size: 1.6rem;
-  border: 0.1rem solid transparent;
-  border-radius: 1rem;
-  cursor: pointer;
+.section-about .about__info {
+  margin-left: 2rem;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.section-about .about__info .btn-group .btn-active-about {
-  background-color: #f50057;
+.section-about .about__info .aboutme {
+  margin-top: -25rem;
+}
+
+.section-about .about__info .aboutme .btn-about-info {
+  margin-top: 4rem;
+}
+
+.section-about .about__info .aboutme__intro {
+  font-size: 1.4rem;
+  font-family: "Poppins", sans-serif;
+  margin-top: 4rem;
+  padding-right: 13rem;
+  text-align: justify;
+}
+
+.section-about .about__info .skill__info .skills {
+  margin-top: 4rem;
+  width: 50%;
+}
+
+.section-about .about__info .skill__info .skills .badge {
   color: #fff;
+  background-color: #f50057;
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+  margin-right: 1rem;
+  margin-bottom: 2rem;
+  display: inline-block;
+}
+
+.section-about .about__info .experience__info .experience__post {
+  font-size: 1.6rem;
+}
+
+.section-about .about__info .experience__info .experience__org {
+  font-size: 1.6rem;
+  font-weight: 400;
+  margin: 1rem 0;
+}
+
+.section-about .about__info .experience__info .experience__duration {
+  font-size: 1.4rem;
 }
 
 .section-about .about__img-mod {
   width: 75%;
+}
+
+.section-services {
+  padding: 10rem 0;
+  background-color: #f3f2f0;
+}
+
+.services__header {
+  text-align: center;
+}
+
+.service-carousel {
+  margin-top: 2rem;
+}
+
+.service-1 {
+  background-color: #fff;
+  padding: 3rem 2rem;
+  margin-right: 2rem;
+}
+
+.service-1 .service-icon .fa-file-code {
+  background: #f50057;
+  padding: 1rem 1.5rem;
+  font-size: 4.6rem;
+  color: #fff;
+  margin-bottom: 2rem;
+}
+
+.service-1 .service-description {
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+.service-1 .service-link,
+.service-1 .service-link:link,
+.service-1 .service-link:visited {
+  text-decoration: none;
+  color: #f50057;
+  font-size: 1.6rem;
+  display: inline-block;
+  margin-top: 1rem;
+}
+
+.service-1 .service-link {
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.service-1 .service-link-icon {
+  font-size: 1.2rem;
+}
+
+.service-1 .service-link:hover {
+  color: #fff;
+  background-color: #f50057;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
 }
 /*# sourceMappingURL=main.css.map */
