--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -9,4 +9,32 @@
   &-primary-mod {
     margin-left: -0.5rem;
   }
+  &__aboutme {
+    font-size: 4rem;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 4rem;
+      height: 0.5rem;
+      background-color: $color-secondary;
+      top: 7rem;
+      left: 0rem;
+    }
+  }
+
+  &__service-small {
+    font-size: 1.5rem;
+    color: $color-secondary;
+    margin-bottom: 1rem;
+  }
+  &__services {
+    font-size: 4rem;
+    padding: 0 22rem;
+  }
+  &-service-1 {
+    font-size: 2.6rem;
+    margin: 1rem 0;
+    color: $color-secondary;
+  }
 }
