--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -36,3 +36,26 @@
     }
   }
 }
+
+.btn-group {
+  .btn-about {
+    padding: 0.8rem 1.5rem;
+    font-size: 1.6rem;
+    border: 0.1rem solid transparent;
+    border-radius: 1rem;
+    &:not(:last-child) {
+      margin-right: 1rem;
+    }
+    cursor: pointer;
+  }
+  .btn-active-about {
+    background-color: $color-secondary;
+    color: $color-white-1;
+  }
+  &-aboutme {
+  }
+  &-skill {
+  }
+  &-experience {
+  }
+}
