working on the portfolio section

--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,11 @@ body {
   color: #f50057;
 }
 
+.heading-work-1 {
+  font-size: 1.6rem;
+  color: #fff;
+}
+
 .marginTop4 {
   margin-top: 4rem;
 }
@@ -616,5 +621,49 @@ body {
   background-color: #f50057;
   -webkit-transform: translateY(-2px);
           transform: translateY(-2px);
+}
+
+.section-portfolio {
+  padding: 10rem 0;
+}
+
+.work {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+}
+
+.work-1 {
+  position: relative;
+}
+
+.work-1-info {
+  text-align: center;
+  background-color: rgba(19, 19, 19, 0.4);
+  position: absolute;
+  top: 0;
+  left: 0rem;
+  opacity: 0;
+  z-index: -1;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  height: 100%;
+  width: 100%;
+}
+
+.work-1-info-mod {
+  -webkit-transform: translate(0%, 69%);
+          transform: translate(0%, 69%);
+}
+
+.work-1-img {
+  width: 100%;
+}
+
+.work-1-img:hover .work-1-info {
+  opacity: 1;
+  z-index: 1;
 }
 /*# sourceMappingURL=main.css.map */
