--- a/css/main.css
+++ b/css/main.css
@@ -633,6 +633,7 @@ body {
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
+  margin-top: 4rem;
 }
 
 .work-1 {
@@ -641,7 +642,7 @@ body {
 
 .work-1-info {
   text-align: center;
-  background-color: rgba(19, 19, 19, 0.4);
+  background-color: rgba(19, 19, 19, 0.7);
   position: absolute;
   top: 0;
   left: 0rem;
@@ -649,7 +650,7 @@ body {
   z-index: -1;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  height: 100%;
+  height: 99%;
   width: 100%;
 }
 
@@ -662,8 +663,8 @@ body {
   width: 100%;
 }
 
-.work-1-img:hover .work-1-info {
+.work-1:hover .work-1-info {
   opacity: 1;
-  z-index: 1;
+  z-index: 4;
 }
 /*# sourceMappingURL=main.css.map */
