--- a/scss/pages/_portfolio.scss
+++ b/scss/pages/_portfolio.scss
@@ -6,19 +6,20 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
+  margin-top: 4rem;
   &-1 {
     position: relative;
 
     &-info {
       text-align: center;
-      background-color: rgba($color-black-1, $alpha: 0.4);
+      background-color: rgba($color-black-1, $alpha: 0.7);
       position: absolute;
       top: 0;
       left: 0rem;
       opacity: 0;
       z-index: -1;
       transition: all 0.4s;
-      height: 100%;
+      height: 99%;
       width: 100%;
       &-mod {
         transform: translate(0%, 69%);
@@ -26,11 +27,10 @@
     }
     &-img {
       width: 100%;
-
-      &:hover .work-1-info {
-        opacity: 1;
-        z-index: 1;
-      }
+    }
+    &:hover .work-1-info {
+      opacity: 1;
+      z-index: 4;
     }
   }
 }
