--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,3 +15,5 @@
 @import "./pages/section";
 @import "./pages/services";
 @import "./pages/portfolio";
+@import "./pages/contact";
+@import "./pages/footer";
